completed previously mentioned tasks

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Initial D</title>
-    <link rel="icon" href="media/AE86_icon.png" type="image/png">
+    <link rel="icon" href="media/tab.png" type="image/png">
     <link rel="stylesheet" href="index.css">
 </head>
 <body style = "margin: 0px">
@@ -12,17 +12,86 @@
         <img src="media/mainlogo.png" alt="home" class="logopic">
         <div class="gap"></div>
         <div class="nav">
-            <div class="main"><p>Main</p></div>
-            <div class="gallery"><p>Gallery</p></div>
-            <div class="watch"><p>Watch</p></div>
+            <div class="main"><a href="#main"><p>Main</p></a></div>
+            <div class="gallery"><a href="#gallery"><p>Gallery</p></a></div>
+            <div class="watch"><a href="#watch"><p>Watch</p></a></div>
         </div>
     </div>
-    <div class="intro">
-        <div class="description"></div>
-        <div class="media"></div>
+    <div class="intro" id="main">
+        <div class="description">
+            <div class="tokyo">
+                <p>~ No One Sleeps In Tokyo ~</p>
+            </div>
+            <div class="desc">
+                <p>Set in the late 1990s in Japan's Gunma Prefecture, 
+                the series follows the adventures of Takumi Fujiwara, 
+                an eighteen year old who helps his father run a tofu store by making deliveries every morning to a hotel on Akina with his father's Toyota Sprinter Trueno GT-APEX (AE86).
+                It is revealed that Takumi has been driving on Mt. Akina every morning to deliver Tofu to the summit five years before he even had his license - since he was about 13-14 years old. 
+                As a result his skills in mountain racing were honed, and he is able to drive under adverse weather conditions.</p>
+                <br>
+                <p><a href="https://initiald.fandom.com/wiki/Initial_D">Learn More</a></p>
+            </div>
+        </div>
+        <div class="media"><a href="https://initiald.fandom.com/wiki/Initial_D">
+            <img src="media/AE86_icon.png" alt="AE86" class="AE86">
+        </a></div>
     </div>
-    <div class="info"></div>
-    <div class="quote">
+    <div class="info" id="gallery">
+        <div class="gallery2">
+            <p>Gallery</p>
+        </div>
+        <div class="fillers"><a href="https://www.youtube.com/playlist?list=PLGdEbnOoiEOOaFFYKh3A66wOUlrHUwzTs">
+            <div class="filler1">
+                <div class="filler1-img">
+                    <img src="media/gallery/filler1.jpg" alt="rx7" class="square">
+                </div>
+                <div class="filler1-text">
+                    <h3>Best Eurobeats</h3>
+                    <br>
+                </div>
+                <div class="filler1-text1">
+                    <p> The best collection of eurobeat from the series all in one spot!</p>
+                </div>
+            </a></div>
+            <div class="filler1"><a href="https://www.google.com/maps/place/Mount+Haruna/@36.4769596,138.8577555,14z/data=!3m1!4b1!4m6!3m5!1s0x601e7c8363279317:0xc4f155891c763050!8m2!3d36.4769619!4d138.8783551!16zL20vMDM1NXEx?entry=ttu">
+                <div class="filler1-img">
+                    <img src="media/gallery/filler2.jpg" alt="impreza" class="square">
+                </div>
+                <div class="filler1-text">
+                    <h3>The Origin</h3>
+                    <br>
+                </div>
+                <div class="filler1-text1">
+                    <p> The location where it all started! </p>
+                </div>
+            </a></div>
+            <div class="filler1"><a href="https://onemotoring.lta.gov.sg/content/onemotoring/home/buying/coe-open-bidding.html">
+                <div class="filler1-img">
+                    <img src="media/gallery/filler3.jpg" alt="r32" class="square">
+                </div>
+                <div class="filler1-text">
+                    <h3>Reality Check</h3>
+                    <br>
+                </div>
+                <div class="filler1-text1">
+                    <p> Feeling impulsive to get your very own JDM after watching the series? </p>
+                </div>
+            </a></div>
+            <div class="filler1"><a href="https://mfghost.fandom.com/wiki/MF_Ghost_(Anime)">
+                <div class="filler1-img">
+                    <img src="media/gallery/filler4.jpg" alt="gt86" class="square">
+                </div>
+                <div class="filler1-text">
+                    <h3>MF Ghost</h3>
+                    <br>
+                </div>
+                <div class="filler1-text1">
+                    <p> What happened to Takumi after the series ?</p>
+                </div>
+            </a></div>
+        </div>
+    </div>
+    <div class="quote" id="watch">
         <div class="quote-text">
             <p>"No matter how strong the pain is, it's our duty to move forward. You're wrong for running away from reality."</p>
         </div>
@@ -33,7 +102,23 @@
             <img src="media/ryosuke.jpg" alt="Ryosuke Takahashi" class="handsome">
         </div>
     </div>
-    <div class="action"></div>
+    <div class="action">
+        <div class="driver1"><a href="https://ww8.gogoanimes.org/category/initial-d-first-stage">
+            <img src="media/watch/takumi.jpg" alt="default_iddrift" class="maindriftid">
+            <img src="media/watch/watchid.gif" alt="iddrift" class="subdriftid">
+        </a></div>
+        <div class="action_text">
+            <p class="gallery2">Watch the series now!</p>
+            <br>
+            <p class="filler1-text1">&lt;&lt;&lt;  Initial D First stage</p>
+            <br>
+            <p class="filler1-text1">MF Ghost  &gt;&gt;&gt;</p>
+        </div>
+        <div class="driver2"><a href="https://ww8.gogoanimes.org/category/mf-ghost">
+            <img src="media/watch/kanata.jpg" alt="default_mfgdrift" class="maindriftmfg">
+            <img src="media/watch/watchmfg.gif" alt="mfgdrift" class="subdriftmfg">
+        </a></div>
+    </div>
     <div class="copyright"> 
             <p>Copyright © Initial D 2024</p>
     </div>
